--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "lodash": "^4.17.21",
     "next": "10.0.9",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-lottie": "^1.2.3",
+    "react-parallax": "^3.2.1",
+    "sass": "^1.32.8",
+    "swiper": "^6.5.0",
+    "swr": "^0.5.4"
   }
 }
